--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ discord==1.0.1
 discord.py==1.7.2
 idna==2.10
 multidict==5.1.0
+numpy==1.21.1
 requests==2.25.1
 soupsieve==2.2.1
 typing-extensions==3.10.0.0
