--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = C:\Users\tdamn\AppData\Local\Programs\Python\Python39
-include-system-site-packages = true
-version = 3.9.6
+home = C:\Users\tdamn\AppData\Local\Programs\Python\Python310
+include-system-site-packages = false
+version = 3.10.0
