--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ share/python-wheels/
 Scripts/
 Include/
 MANIFEST
+.env
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
